zero-cost-templating/tests/ui/compile_fail/must_use.stderr
error: unused `Template` that must be used
  --> tests/ui/compile_fail/must_use.rs:18:5
   |
18 |     template.test_template6();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> tests/ui/compile_fail/must_use.rs:1:9
   |
1  | #![deny(warnings)]
   |         ^^^^^^^^
   = note: `#[deny(unused_must_use)]` implied by `#[deny(warnings)]`
help: use `let _ = ...` to ignore the resulting value
   |
18 |     let _ = template.test_template6();
   |     +++++++
